fix fonts, icons, collapse

--- a/assets/styles/app/_block-2.scss
+++ b/assets/styles/app/_block-2.scss
@@ -7,7 +7,7 @@
     align-items: center;
 
     &__media {
-      padding: 0 10px;
+      margin-right: 20px;
 
       svg {
         width: 45px;
@@ -18,7 +18,7 @@
 
       p {
         font-size: 13px;
-        font-weight: 600;
+        font-weight: 500;
         color: rgba(0,0,0,0.7);
         margin: 0;
       }
