--- a/assets/styles/app/_navbar.scss
+++ b/assets/styles/app/_navbar.scss
@@ -12,7 +12,7 @@
   font-size: 11px;
   color: #fff;
   transition: 0.3s ease-in-out;
-  font-weight: 600;
+  font-weight: 500;
 
   &:hover {
     color: #7c7c7c;
