--- a/assets/styles/app/_product-item.scss
+++ b/assets/styles/app/_product-item.scss
@@ -15,14 +15,14 @@
 
     &--text {
       font-size: 14px;
-      font-weight: 600;
+      font-weight: 500;
       color: #000;
       margin: 0 0 5px;
     }
 
     &--option {
       font-size: 11px;
-      font-weight: 600;
+      font-weight: 500;
       color: rgba(0,0,0,0.4);
       margin: 0;
     }
